This this the changelog file for the Pothos C++ library.

Release 0.6.0 (pending)
==========================

- Automatic slots for all void calls in Block::registerCallable
- Renamed the project repo from pothos to PothosCore
- Updated toolkit/submodule URLs for repo rename
  - Renamed pothos-gui toolkit to PothosFlow
  - Renamed pothos-sdr toolkit to PothosSoapy
- Alternative JSON C++ library to handle JSON parsing/emitting

Release 0.5.1 (2017-08-16)
==========================

- Fixed buffer inlining corner case for amalgamated multi-buffers
- Moved cmake modules into subdirectory to hide them from cmake's
  default project search path when cloned in user's home directory
- Fix for doc parser and getline for windows newlines
- Added missing functional include for Remote/Server.cpp
- Exception handling for EvalEnvironment::registerConstantObj()
- Fixed memory leak in Util FileLock implementation

Release 0.5.0 (2017-04-27)
==========================

- BlockEval API changes to support GUI evaluator
- DocUtils API changes to support GUI docs query
- Removed the pothos-serialization dependency and
  replaced it with a much smaller in-library solution.
  The serialization format has changed for this release.
- Switch stdio to end of line flushing for logging
- Added Plugin path API for concatenating two paths
- Added API for parsing sources for block descriptions
- Created configuration-file based loader for plugins:
    - With built-in loader for JSON topologies
    - With built-in loader for JIT compilation
    - With built-in loader for block descriptions
- Added PluginModule boolean operator for checking null
- Reimplemented compiler support around file paths
- Reimplemented QFormat for simplification and warnings

Release 0.4.3 (2017-04-23)
==========================

- Fixed RemoteServer process arguments for some shells
- Fix copy/paste typo in DeviceInfoUtils registration

Release 0.4.2 (2017-01-26)
==========================
