@@ -4,7 +4,7 @@
 /// CallInterface provides an method call abstraction interface.
 ///
 /// \copyright
-/// Copyright (c) 2013-2016 Josh Blum
+/// Copyright (c) 2013-2017 Josh Blum
 /// SPDX-License-Identifier: BSL-1.0
 ///
 
@@ -32,11 +32,7 @@ public:
 
     //! Call a bound method/function with an Object return and variable args
     template <typename... ArgsType>
-    Object callObject(ArgsType&&... args) const;
-
-    //! Call a bound method/function with a void return and variable args
-    template <typename... ArgsType>
-    void callVoid(ArgsType&&... args) const;
+    Object call(ArgsType&&... args) const;
 
 protected:
     /*!
