@@ -3,6 +3,14 @@ This this the changelog file for the Pothos C++ library.
 Release 0.6.0 (pending)
 ==========================
 
+- API changes Pothos::Object
+  * Object supports implicit templated convert to target type
+  * Proxy supports implicit templated convert to target type
+  * Removed Callable interface's callVoid() function
+  * Renamed Callable interface's callObject() to call()
+  * Removed Proxy interface's callVoid() function
+  * Renamed Proxy interface's callProxy() to call()
+
 - Automatic slots for all void calls in Block::registerCallable
 - Renamed the project repo from pothos to PothosCore
 - Updated toolkit/submodule URLs for repo rename
